--- a/impressum.html
+++ b/impressum.html
@@ -13,7 +13,6 @@
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-grid.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-reboot.min.css">
-  <link rel="stylesheet" href="assets/web/assets/gdpr-plugin/gdpr-styles.css">
   <link rel="stylesheet" href="assets/tether/tether.min.css">
   <link rel="stylesheet" href="assets/dropdown/css/style.css">
   <link rel="stylesheet" href="assets/theme/css/style.css">
@@ -22,12 +21,24 @@
   
   
   
-
+<meta name="theme-color" content="#25aab2">
+<link rel="manifest" href="manifest.json">
+<script src="sw-connect.js"></script>
+<meta name="apple-mobile-web-app-capable" content="yes">
+<link rel="apple-touch-startup-image" media="(device-width: 320px) and (device-height: 568px) and (-webkit-device-pixel-ratio: 2) and (orientation: portrait)" href="assets/images/apple-launch-640x1136.png">
+<link rel="apple-touch-startup-image" media="(device-width: 375px) and (device-height: 667px) and (-webkit-device-pixel-ratio: 2) and (orientation: portrait)" href="assets/images/apple-launch-750x1334.png">
+<link rel="apple-touch-startup-image" media="(device-width: 414px) and (device-height: 736px) and (-webkit-device-pixel-ratio: 3) and (orientation: portrait)" href="assets/images/apple-launch-1242x2208.png">
+<link rel="apple-touch-startup-image" media="(device-width: 375px) and (device-height: 812px) and (-webkit-device-pixel-ratio: 3) and (orientation: portrait)" href="assets/images/apple-launch-1125x2436.png">
+<link rel="apple-touch-startup-image" media="(device-width: 768px) and (device-height: 1024px) and (-webkit-device-pixel-ratio: 2) and (orientation: portrait)" href="assets/images/apple-launch-1536x2048.png">
+<link rel="apple-touch-startup-image" media="(device-width: 834px) and (device-height: 1112px) and (-webkit-device-pixel-ratio: 2) and (orientation: portrait)" href="assets/images/apple-launch-1668x2224.png">
+<link rel="apple-touch-startup-image" media="(device-width: 1024px) and (device-height: 1366px) and (-webkit-device-pixel-ratio: 2) and (orientation: portrait)" href="assets/images/apple-launch-2048x2732.png">
+<meta name="apple-mobile-web-app-status-bar-style" content="default">
+<meta name="apple-mobile-web-app-title" content="FlauschCraft">
+<link rel="apple-touch-icon" href="apple-touch-icon.png">
 </head>
 <body>
 
 <!-- Analytics -->
-<!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-46327270-7"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
@@ -57,7 +68,7 @@
     </div>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/i">free website creation software</a></section><section once="footers" class="cid-rL8zNRshtJ" id="footer6-1x">
+<section class="engine"><a href="https://mobirise.info/f">easy site creator</a></section><section once="footers" class="cid-rL8zNRshtJ" id="footer6-1x">
 
     
 
@@ -127,10 +138,9 @@
   <script src="assets/touchswipe/jquery.touch-swipe.min.js"></script>
   <script src="assets/theme/js/script.js"></script>
   <script src="assets/formoid/formoid.min.js"></script>
-  <script src="assets/web/assets/lazyload/lazyload.js"></script>
   
-<div id="cookie-dialog" style="display: none;"><div id="cookiesdirective"><div style="position: fixed; top: 0; right: 0; bottom: 0; left: 0; background-color: rgb(0, 0, 0); opacity: 0.8; z-index: 9999;"></div><div style="position: fixed; top: 0; right: 0; bottom: 0; left: 0; display: flex; align-items: center; z-index: 10000"><div class="display-7" style="position: relative; width: 100%; max-width: 500px; margin-right: auto; margin-left: auto; font-size:inherit; padding: 1rem; text-align: center; border-radius: .3rem; box-shadow: 0 10px 40px 0 rgba(0,0,0,0.2); color:#424a4d; background:rgba(234, 239, 241, 0.99);">FlauschCraft verwendet zum Teil Cookies auf dieser Website, die auf Basis des Nutzungsverhaltens bestimmte Funktionen, wie z. B. eine Analyse der Benutzung der Website, ermöglichen. Mehr dazu unter <a style='color: #424a4d; text-decoration: underline;' href='impressum.html'>Datenschutz</a>.<input style="display: block; margin-top: 10px; margin-right: auto; margin-left: auto; font-size:inherit;;" class="btn btn-sm btn-primary display-7" type="submit" name="impliedsubmit" id="impliedsubmit" value="Zustimmen"/></div></div></div></div>
-  <input name="cookieData" type="hidden" data-cookie-customDialogSelector='#cookie-dialog' data-cookie-colorText='#424a4d' data-cookie-colorBg='rgba(234, 239, 241, 0.99)' data-cookie-textButton='Zustimmen' data-cookie-colorButton='' data-cookie-colorLink='#424a4d' data-cookie-underlineLink='true' data-cookie-text="FlauschCraft verwendet zum Teil Cookies auf dieser Website, die auf Basis des Nutzungsverhaltens bestimmte Funktionen, wie z. B. eine Analyse der Benutzung der Website, ermöglichen. Mehr dazu unter <a href='impressum.html'>Datenschutz</a>.">
+  
+<input name="cookieData" type="hidden" data-cookie-customDialogSelector='null' data-cookie-colorText='#424a4d' data-cookie-colorBg='rgba(234, 239, 241, 0.99)' data-cookie-textButton='Zustimmen' data-cookie-colorButton='' data-cookie-colorLink='#424a4d' data-cookie-underlineLink='true' data-cookie-text="FlauschCraft verwendet zum Teil Cookies auf dieser Website, die auf Basis des Nutzungsverhaltens bestimmte Funktionen, wie z. B. eine Analyse der Benutzung der Website, ermöglichen. Mehr dazu unter <a href='impressum.html'>Datenschutz</a>.">
   
 </body>
 </html>
