--- a/impressum.html
+++ b/impressum.html
@@ -21,6 +21,7 @@
   
   
   
+
 <meta name="theme-color" content="#25aab2">
 <link rel="manifest" href="manifest.json">
 <script src="sw-connect.js"></script>
@@ -34,8 +35,7 @@
 <link rel="apple-touch-startup-image" media="(device-width: 1024px) and (device-height: 1366px) and (-webkit-device-pixel-ratio: 2) and (orientation: portrait)" href="assets/images/apple-launch-2048x2732.png">
 <meta name="apple-mobile-web-app-status-bar-style" content="default">
 <meta name="apple-mobile-web-app-title" content="FlauschCraft">
-<link rel="apple-touch-icon" href="apple-touch-icon.png">
-</head>
+<link rel="apple-touch-icon" href="apple-touch-icon.png"></head>
 <body>
 
 <!-- Analytics -->
@@ -68,7 +68,7 @@
     </div>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/f">easy site creator</a></section><section once="footers" class="cid-rL8zNRshtJ" id="footer6-1x">
+<section class="engine"><a href="https://mobirise.info/s">bootstrap theme</a></section><section once="footers" class="cid-rL8zNRshtJ" id="footer6-1x">
 
     
 
@@ -104,14 +104,14 @@
                     </a>
                 </span>
                 <span class="navbar-caption-wrap"><a class="navbar-caption text-white display-4" href="https://www.flauschcraft.com">
-                        Flauschcraft</a></span>
+                        FlaushCraft</a></span>
             </div>
         </div>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav nav-dropdown" data-app-modern-menu="true"><li class="nav-item">
                     <a class="nav-link link text-white display-4" href="#top">
                         
-                        Start</a>
+                        Home</a>
                 </li><li class="nav-item"><a class="nav-link link text-white display-4" href="index.html#features11-1n">3D Druck</a></li>
                 <li class="nav-item">
                     <a class="nav-link link text-white display-4" href="index.html#info2-f">
