create github pages

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                     </a>
                 </span>
                 <span class="navbar-caption-wrap"><a class="navbar-caption text-white display-4" href="https://www.flauschcraft.com">
-                        FlaushCraft</a></span>
+                        FlauschCraft</a></span>
             </div>
         </div>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
@@ -97,7 +97,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/r">free bootstrap templates</a></section><section class="header11 cid-rLbBrtQ8x7 mbr-fullscreen" data-bg-video="https://www.youtube.com/watch?v=HnPYeBJ9JCc" id="header11-23">
+<section class="engine"><a href="https://mobirise.info/g">build your own website</a></section><section class="header11 cid-rLbBrtQ8x7 mbr-fullscreen" data-bg-video="https://www.youtube.com/watch?v=HnPYeBJ9JCc" id="header11-23">
 
     <!-- Block parameters controls (Blue "Gear" panel) -->
     
@@ -109,7 +109,7 @@
         <div class="media-container-column mbr-white col-md-12">
             <h3 class="mbr-section-subtitle py-3 mbr-fonts-style display-5">FlauschCraft</h3>
             <h1 class="mbr-section-title py-3 mbr-fonts-style display-1"><strong>Selbstgemachtes in 3D</strong></h1>
-            <p class="mbr-text py-3 mbr-fonts-style display-5">Wir fertigen individuelle und einzigartige Produkte.&nbsp;<br>Wir legen wert auf höchste Qualität und beste Materialien. Überzeuge dich und besuche unseren Shop bei <a href="https://www.etsy.com/" target="_blank"><strong>Etsy</strong></a>.</p>
+            <p class="mbr-text py-3 mbr-fonts-style display-5">Wir fertigen individuelle und einzigartige Produkte.&nbsp;<br>Wir legen wert auf höchste Qualität und beste Materialien. Überzeuge dich und besuche unseren Shop bei <a href="https://www.etsy.com/shop/FlauschCraft" target="_blank"><strong>Etsy</strong></a>.</p>
             <div class="mbr-section-btn py-4"><a class="btn btn-md btn-primary display-4" href="index.html#features11-1n"><strong>Mehr</strong></a> <a class="btn btn-md btn-warning display-4" href="mailto:anfrage@flauschcraft.com"><strong>Anfrage senden</strong></a></div>
         </div>
     </div>
@@ -167,7 +167,7 @@
 
                             <div class="card-box">
                                 <p class="block-text mbr-fonts-style display-7">
-                                    Du findest unsere sofort verfügbaren Produkte im <a href="https://www.etsy.com/shop/" target="_blank"><strong>FlauschCraft Etsy Shop</strong></a>
+                                    Du findest unsere sofort verfügbaren Produkte im <a href="https://www.etsy.com/shop/FlauschCraft" target="_blank"><strong>FlauschCraft Etsy Shop</strong></a>
                                 </p>
                             </div>
                         </div>
@@ -193,7 +193,7 @@
                 <h2 class="align-right mbr-bold mbr-white pb-3 mbr-fonts-style display-2">
                     Hochqualitative Materialien</h2>
                 <h3 class="mbr-section-subtitle align-right mbr-light mbr-white mbr-fonts-style display-5">
-                    Wir verwenden für unsere 3D Drucke ausschließlich hochwertige Filamente von<strong>&nbsp;<a href="https://www.extrudr.com" target="_blank"><b>Extrudr</b></a>, <a href="https://www.prusament.com" target="_blank"><b>Prusament</b></a> </strong>und<strong> <a href="https://www.eryone.com/" target="_blank"><b>Eryone</b></a></strong></h3>
+                    Wir verwenden für unsere 3D Drucke ausschließlich hochwertige Filamente von<strong>&nbsp;<a href="https://www.extrudr.com" target="_blank"><b>Extrudr</b></a>&nbsp;</strong>und<strong>&nbsp;</strong><strong>&nbsp;</strong><a href="https://www.prusament.com" target="_blank" style="font-weight: bold;"><strong>Prusament</strong></a></h3>
             </div>
         </div>
     </div>
